# hasql-postgres

./: .travis.yml  CHANGELOG.md  README.md  Setup.hs  cabal.config  hasql-postgres.cabal  high-sql-postgres.cabal  stack.yaml
competition/: Main.hs
hspec/: Main.hs
htf/: Main.hs
library-tests/: Main.hs
library-tests/Hasql/Postgres/: ParserAndRendererTests.hs  ParserTests.hs  TemplateConverterTests.hs
library-tests/HighSQLPostgres/: ParserTests.hs  TemplateConverterTests.hs
profiling/: Main.hs
tests/: Main.hs
