name:
  hasql-postgres
version:
  0.10.5.1
synopsis:
  A "PostgreSQL" backend for the "hasql" library
description:
  This library provides a \"PostgreSQL\" driver for
  <http://hackage.haskell.org/package/hasql the "hasql" library>.
  .
  It supports all Postgres versions starting from 8.3
  and is tested against 8.3, 9.3 and 9.4
  with the @integer_datetimes@ setting off and on.
  .
  According to the included benchmarks,
  it performs up to 2x faster than \"postgresql-simple\" and
  up to 7x faster than \"HDBC\".
  You can read up
  <http://nikita-volkov.github.io/hasql-benchmarks/ a post with analysis of those benchmarks>.
category:
  Database
homepage:
  https://github.com/nikita-volkov/hasql-postgres
bug-reports:
  https://github.com/nikita-volkov/hasql-postgres/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Custom
cabal-version:
  >=1.10
extra-source-files:
  CHANGELOG.md


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-postgres.git


library
  hs-source-dirs:
    library
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Postgres.Prelude
    Hasql.Postgres.PTI
    Hasql.Postgres.Mapping
    Hasql.Postgres.Connector
    Hasql.Postgres.Statement
    Hasql.Postgres.Statement.TemplateConverter
    Hasql.Postgres.Statement.TemplateConverter.Parser
    Hasql.Postgres.Session.ResultProcessing
    Hasql.Postgres.Session.Execution
    Hasql.Postgres.Session.Transaction
  exposed-modules:
    Hasql.Postgres.ErrorCode
    Hasql.Postgres
  build-depends:
    -- template haskell:
    template-haskell,
    -- parsers:
    attoparsec >= 0.10,
    -- database:
    hasql-backend,
    postgresql-binary,
    postgresql-libpq,
    -- data:
    aeson >= 0.7,
    uuid,
    vector >= 0.10,
    time >= 1.4,
    hashtables >= 1.1,
    scientific >= 0.2,
    text >= 1,
    bytestring >= 0.10,
    hashable >= 1.2,
    -- control:
    free >= 4.6,
    either >= 4.3,
    list-t,
    mmorph,
    transformers >= 0.3,
    -- errors:
    loch-th,
    placeholders,
    -- general:
    base-prelude >= 0.1.13


test-suite doctest
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    doctest
  main-is:
    Main.hs
  ghc-options:
    -threaded
  build-depends:
    doctest,
    directory,
    filepath >= 1.3,
    base-prelude,
    base
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators
  default-language:
    Haskell2010


test-suite hspec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    hspec
  main-is:
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- database:
    postgresql-binary,
    hasql-postgres,
    hasql-backend,
    hasql,
    -- testing:
    hspec,
    quickcheck-instances,
    QuickCheck,
    -- data:
    aeson,
    vector,
    old-locale,
    time >= 1.4,
    scientific >= 0.2,
    text >= 1,
    bytestring >= 0.10,
    hashable >= 1.2,
    -- general:
    either,
    list-t,
    mtl-prelude,
    base-prelude >= 0.1.3


benchmark competition
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    competition
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    HDBC,
    HDBC-postgresql,
    postgresql-simple,
    hasql-postgres,
    hasql-backend,
    hasql,
    -- random:
    QuickCheck,
    quickcheck-instances,
    -- benchmarking:
    criterion-plus,
    -- data:
    vector,
    time >= 1.4,
    text >= 1,
    scientific >= 0.2,
    -- general:
    either,
    monad-control >= 0.3,
    deepseq,
    list-t,
    mtl-prelude,
    base-prelude >= 0.1.3
